# benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  cli.py
benchmark/auth/: __init__.py  authenticator.py  entrypoint.py
benchmark/clients/: __init__.py  browser_client.py  http_client.py  websocket_client.py
benchmark/core/: __init__.py  base.py  config.py  metrics.py  runner.py
benchmark/scenarios/: __init__.py  channels.py  chat.py  chat_ui.py
benchmark/utils/: __init__.py  docker.py
config/: benchmark_config.yaml  compute_profiles.yaml
docker/: docker-compose.benchmark.yaml  run.sh
examples/: custom_benchmark.py  run_channel_benchmark.py
tests/: test_core.py
